Project-01/force-app/main/default/objects/Return_Sale__c/Return_Sale__c.object-meta.xml
<CustomObject>
    <label>Return</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Return Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>