Project-01/force-app/main/default/objects/Return_Sale__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <label>Approval Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>