Project-01/force-app/main/default/objects/Return_Sale__c/fields/Sales_Associate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>